feat: add ConfirmationDialog component for reusable alert dialogs
refactor: clean up Navbar component by removing console log

fix: adjust sidebar toggle button position

feat: create TableAction component for table row actions

refactor: update DataTable component for improved readability and functionality

feat: implement AlertDialog component for consistent alert dialogs

chore: add logoutById endpoint to loginLog API

fix: update document title to "Work Portal"

fix: enhance error handling in useAPI hook

feat: add useApiMutation hook for API mutations

feat: implement Check component with reusable alert dialog examples

feat: integrate ConfirmationDialog in ShowLoginLog for logout confirmation

delete: remove unused index page for login log

refactor: clean up tableDemo component by commenting out unused code

feat: add test route to UserRoute for testing purposes

chore: update tsconfig to disable strict checks

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,12 @@
   transform: translateX(-38px);
   animation: l21 0.5s infinite alternate linear;
 }
+
+button:disabled {
+  cursor: not-allowed;
+  pointer-events: all !important;
+}
+input:disabled {
+  cursor: not-allowed;
+  pointer-events: all !important;
+}
